@@ -30,7 +30,7 @@ MY_CHECK_EXCEPTIONS
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h sstream regex.h term.h inttypes.h winsock.h sys/socket.h process.h windows.h)
+AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h sstream limits regex.h term.h inttypes.h winsock.h sys/socket.h process.h windows.h)
 AC_CHECK_HEADERS(stdio.h endian.h)
 
 MY_CHECK_HASH_MAP
